--- a/ChoreManager/app/src/main/AndroidManifest.xml
+++ b/ChoreManager/app/src/main/AndroidManifest.xml
@@ -16,14 +16,19 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".AppLoginActivity"
-            android:label="@string/app_name">
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity"></activity>
+        <activity
+            android:name=".MenuActivity"
+            android:label="Menu"></activity>
+        <activity
+            android:name=".UserMenu"
+            android:label="Users"></activity>
     </application>
 
 </manifest>
