--- a/ChoreManager/app/build.gradle
+++ b/ChoreManager/app/build.gradle
@@ -30,13 +30,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    //Added
+    //Added for firebase authentication
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.google.firebase:firebase-auth:11.6.2'
     compile 'com.google.android.gms:play-services-auth:11.6.2'
+
     testCompile 'junit:junit:4.12'
-    // Add to the bottom of the file
-    apply plugin: 'com.google.gms.google-services'
 }
 
 
