--- a/ChoreManager/app/build.gradle
+++ b/ChoreManager/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-auth:11.6.2'
+    implementation 'com.google.firebase:firebase-database:11.6.2'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -37,6 +38,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
