--- a/ChoreManager/app/src/main/AndroidManifest.xml
+++ b/ChoreManager/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
             <activity
                 android:name=".SpecificChoreActivity"
                 android:label="Chore_Name_Here"
-                android:parentActivityName=".MenuActivity" >
+                android:parentActivityName=".ChoreListActivity" >
             </activity>
 
             <activity
