Changed manifest for SCA and compelted the textviews

--- a/ChoreManager/app/src/main/AndroidManifest.xml
+++ b/ChoreManager/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
 
             <activity
                 android:name=".SpecificChoreActivity"
-                android:label="Chore_Name_Here"
+                android:label="Chore Details"
                 android:parentActivityName=".ChoreListActivity" >
             </activity>
 
