--- a/ChoreManager/app/src/main/AndroidManifest.xml
+++ b/ChoreManager/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_new_launcher_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_new_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <!-- MAIN ACTIVITY -->
         <activity
             android:name=".AppLoginActivity"
-            android:label="Login">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
